[tool.poetry]
name = "scheduled-payments"
version = "1.0.0"
description = "Plan future payments, manage recurring recipients, and quickly prefill the transaction composer."
authors = [
    "andreasgriffin <andreasgriffin@proton.me>",
]

[tool.bitcoin_safe.plugin]
schema_version = "1"
display_name = "Schedule"
plugin_api_version = "1"
entrypoint = "scheduled_payments/plugin_bundle.py"
bitcoin_safe_version = ">=0.0.0,<999.0.0"
provider = "Bitcoin Safe"

[tool.bitcoin_safe.plugin.btcpay.client]
npub_bitcoin_safe_pos = "npub150ncc39ala3h9zudddrjqy9f7wenp7d20rjm99wchwtkdpze07wqukr9cu"

[tool.bitcoin_safe.plugin.btcpay.btcpay_base]
base_url = "https://pay.bitcoin-safe.org"
pos_app_id = "U59nqzCsTq9vECCHaxiXwnwoSmL"
store_id = "7agECo6zfJRp4Thi8vnBCjCoopb2yrnstaA5FophRfJe"

[[tool.bitcoin_safe.plugin.btcpay.products.schedule]]
pos_id = "schedule-yearly"
trial_pos_id = "schedule-yearly-trial"
offering_id = "offering_6kuCTLa3obewiEM2Xo"
plan_id = "plan_EBPqk276AiAMMG5Jnm"
duration = "year"
